Changed styling and cleanup

--- a/less/style.less
+++ b/less/style.less
@@ -1,1 +1,15 @@
-.a { width: 116px; }
+
+.movie-showtimes-details {
+	.ratings {
+		// padding-left: 10px;
+		margin-bottom: 10px;
+
+		.rating {
+			margin-bottom: 0px;
+
+			.score {
+				font-weight: bold;
+			}
+		}
+	}
+}
